// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render the button with tooltipText correctly 1`] = `
<button
  className="Button full only-icon sc-bwzfXH dLJvGH"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
  <div
    className="Badge Button__tooltip-text darkGray xs sc-bdVaJa icLWVk"
    color="darkGray"
    size="xs"
  >
    Testing tooltip text
  </div>
</button>
`;

exports[`Button should render the default button correctly 1`] = `
<button
  className="Button full only-icon sc-bwzfXH dLJvGH"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the disabled button correctly 1`] = `
<button
  className="Button full disabled only-icon sc-bwzfXH fvfiOE"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost and disabled button correctly 1`] = `
<button
  className="Button disabled ghost only-icon sc-bwzfXH cCkvGP"
  disabled={true}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;

exports[`Button should render the ghost button correctly 1`] = `
<button
  className="Button ghost only-icon sc-bwzfXH jaJXmj"
  disabled={false}
  id={null}
  onClick={[Function]}
  type="button"
>
  <span>
    
  </span>
</button>
`;
